# app/Http/Controllers/Controller.php
@@ -8,7 +8,16 @@ use Illuminate\Routing\Controller as BaseController;
 /**
  * @OA\Server(url="http://localhost:8000/api")
  * @OA\Info(title="VLAB Laravel Backend", version="0.1")
+ * @OA\Components(
+ *     @OA\SecurityScheme(
+ *         securityScheme="bearerAuth",
+ *         type="http",
+ *         scheme="bearer",
+ *         bearerFormat="JWT",
+ *     ),
+ * )
  */
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, ValidatesRequests;
